Wed Apr 23 22:13:47 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (funlen, mbfw1, mbprintf1, mbprintf2): New tests.
	* funlen.awk, funlen.in, funlen.ok: New files.
	* mbfw1.awk, mbfw1.in, mbfw1.ok: New files.
	* mbprintf1.awk, mbprintf1.in, mbprintf1.ok: New files.
	* mbprintf2.awk, mbprintf2.ok: New files.

Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Wed Sep 26 14:32:28 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (localenl): New test.
	(regtest): Fixed invocation of shell script.
	* localenl.sh, localenl.ok: New files.
	* reg/func2.good: Revised to match current gawk output.

Wed Sep 26 14:49:04 2007 Eli Zaretskii  <eliz@gnu.org>

	* exitval2.w32: New file, a Windows version for exitval2.awk.

Tue May 29 13:22:33 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* badargs.ok: Updated.

Thu May 17 21:10:51 2007  Pat Rankin  <rankin@pactechdata.com>

	* icasers.awk: Modify pattern to work on VMS too, doesn't
	break Unix/Linux.

Tue May 15 22:05:24 2007  Pat Rankin  <rankin@pactechdata.com>

	Steps towards generating VMS .mms file to run test suite.

	* Makefile.am (FAIL_CODE1): New macro, list of programs
	that exit 1.
	* Gentests: Add VMS code.
	* Gentests.vms: New file.

Wed May  2 19:30:54 2007  Stepan Kasal  <kasal@ucw.cz>

	Revert precedence of concatenation and | getline.
	From mail dated 2005-10-31.

	* parsefld.awk, parsefld.in, parsefld.ok: New files.
	* Makefile.am (parsefld): New basic test, check for $/regex/ and
	  for /re1/+/re2/.
	* getline.awk, getline.ok: Add precedence check "echo " "date"|getline

Sun Apr 29 22:43:28 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* hsprint.awk: Add extra "%" to format string. Thanks to Nelson Beebe.
	* hsprint.ok: Revised.

Tue Apr 17 22:23:41 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* double2.awk, double2.ok: Limit to 2^63 for portability across
	different platforms. Sigh.
