@@ -1,3 +1,11 @@
+Mon Dec 29 19:49:44 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 189. Ignoring cvsps 188.
+	Almost everything from patch sets 188 and 189 is ignored
+	because the patch sets are mostly about generated files.
+	But the changes made to get the test mbfw1 running again
+	are applied.
+
 Mon Dec 29 19:35:04 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 187. Reorder signal handler installation.
