@@ -1,3 +1,7 @@
+Fri May  2 12:43:51 2008  Steffen Schuler    <schuler.steffen@googlemail.com>
+
+	* Makefile.am (mbfw1): Add code for test to use a UTF locale.
+
 Wed Apr 23 22:13:47 2008  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (funlen, mbfw1, mbprintf1, mbprintf2): New tests.
